--- a/index.html
+++ b/index.html
@@ -41,70 +41,23 @@ h1 {
 h2 {
   font-size: 23px;
 }
-.divider
-{
-  position: relative;
-	margin-top: 45px;
-  margin-bottom: 25px;
-	height: 1px;
-}
-.div-transparent:before
-{
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 5%;
-	right: 5%;
-	width: 90%;
-	height: 1px;
-	background-image: linear-gradient(to right, transparent, black, transparent);
-}
-.div-arrow-down:after
-{
-	content: "";
-	position: absolute;
-	z-index: 1;
-	top: -7px;
-	left: calc(50% - 7px);
-	width: 14px;
-	height: 14px;
-	transform: rotate(45deg);
-	background-color: #FFFFFF;
-	border-bottom: 1px solid black;
-	border-right: 1px solid black;
-}
 
-/*
-Below this comment is the styling for the checkout button,
-including the link to the button's background image.
-*/
-
-.button {
+.div-doodle
+{
   display: inline-block;
+  content: "";
+  position: relative;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 4%;
+  margin-left: 4%;
+  width: 80%;
   height: auto;
-  width: 20%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: black;
-  font-family: 'Liu Jian Mao Cao', cursive;
-  font-size: 2vw;
-  letter-spacing: 7px;
-  border: none;
-  transition-duration: .4s;
-}
-
-.button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-.button:active {
-  background-color: black;
+  background-image: url("https://i.imgur.com/VpT6dQa.png");
+  padding: 4%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 /*
@@ -116,7 +69,7 @@ buttons.
   display:inline-block;
   height: auto;
   width: 10%;
-  padding: 8%;
+  padding: 17%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 1%;
@@ -132,13 +85,17 @@ buttons.
 .btngift:hover {
   background-image: url("https://i.imgur.com/PhQWaK9.png");
 }
+.btngift:focus {
+  background-image: url("https://i.imgur.com/PhQWaK9.png");
+}
+
 .btnyou {
   display:inline-block;
   height: auto;
   width: 10%;
-  padding: 8%;
+  padding: 17%;
   margin-right: 0px;
-  margin-left: 8%;
+  margin-left: 10%;
   cursor:pointer;
   background-image: url("https://i.imgur.com/NmhENOJ.png");
   background-position: center;
@@ -151,6 +108,9 @@ buttons.
 .btnyou:hover {
   background-image: url("https://i.imgur.com/ki2rwHf.png");
 }
+.btnyou:focus {
+  background-image: url("https://i.imgur.com/ki2rwHf.png");
+}
 
 /*
 Below this comment is the styling for the list of icons
@@ -160,8 +120,44 @@ that display the coffee options for the second step.
 .coffeeopt {
   display: inline-block;
   height:auto;
-  width:9%;
-  padding: 5%;
+  width:18%;
+  padding: 10%;
+  margin-right: 2%;
+  margin-left: 0px;
+  margin-top: 2%;
+  cursor: pointer;
+  background-image: url(https://i.imgur.com/4N3SqyA.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: .4vw solid black;
+  outline: none;
+  transition-duration: .2s;
+}
+
+.coffeeopt3 {
+  display: inline-block;
+  height:auto;
+  width:18%;
+  padding: 10%;
+  margin-right: 2%;
+  margin-left: 0px;
+  margin-top: 2%;
+  cursor: pointer;
+  background-image: url(https://i.imgur.com/4N3SqyA.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: .4vw solid black;
+  outline: none;
+  transition-duration: .2s;
+}
+
+.coffeeopt4 {
+  display: inline-block;
+  height:auto;
+  width:18%;
+  padding: 10%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 2%;
@@ -170,12 +166,27 @@ that display the coffee options for the second step.
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border: 4px solid black;
+  border: .4vw solid black;
   outline: none;
   transition-duration: .2s;
 }
 
 .coffeeopt:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.coffeeopt:focus {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.coffeeopt3:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.coffeeopt3:focus {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.coffeeopt4:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.coffeeopt4:focus {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -188,7 +199,7 @@ buttons.
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 2%;
@@ -204,12 +215,14 @@ buttons.
 .btnbean:hover {
   background-image: url("https://i.imgur.com/bF3ogLn.png");
 }
-
+.btnbean:focus {
+  background-image: url("https://i.imgur.com/bF3ogLn.png");
+}
 .btnfrench {
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 0px;
@@ -225,12 +238,14 @@ buttons.
 .btnfrench:hover {
   background-image: url("https://i.imgur.com/H2mMy5p.png");
 }
-    
+.btnfrench:focus {
+  background-image: url("https://i.imgur.com/H2mMy5p.png");
+}
 .btndrip {
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 0px;
@@ -246,12 +261,14 @@ buttons.
 .btndrip:hover {
   background-image: url("https://i.imgur.com/5wux7F9.png");
 }
-
+.btndrip:focus {
+  background-image: url("https://i.imgur.com/5wux7F9.png");
+}
 .btnchemx {
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 4%;
@@ -267,12 +284,14 @@ buttons.
 .btnchemx:hover {
   background-image: url("https://i.imgur.com/JkTMZ86.png");
 }
-
+.btnchemx:focus {
+  background-image: url("https://i.imgur.com/JkTMZ86.png");
+}
 .btnkcup {
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 4%;
@@ -288,12 +307,14 @@ buttons.
 .btnkcup:hover {
   background-image: url("https://i.imgur.com/Qp5gMLN.png");
 }
-
+.btnkcup:focus {
+  background-image: url("https://i.imgur.com/Qp5gMLN.png");
+}
 .btnesp {
   display:inline-block;
   height: auto;
   width: 14%;
-  padding: 7%;
+  padding: 14%;
   margin-right: 0px;
   margin-left: 0px;
   margin-top: 4%;
@@ -309,6 +330,9 @@ buttons.
 .btnesp:hover {
   background-image: url("https://i.imgur.com/W1Wf4rO.png");
 }
+.btnesp:focus {
+  background-image: url("https://i.imgur.com/W1Wf4rO.png");
+}
 
 /*
 Below this comment is the styling for the fourth step
@@ -318,12 +342,12 @@ buttons.
 .btnsmall {
   display:inline-block;
   height: auto;
-  width: 10%;
-  padding: 7%;
+  width: 14%;
+  padding: 13%;
   margin-right: 0px;
   margin-left: 0px;
   cursor:pointer;
-  background-image: url("https://i.imgur.com/zYp3YZ7.png");
+  background-image: url("https://i.imgur.com/AJib07g.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -332,18 +356,43 @@ buttons.
   transition-duration: .4s;
 }
 .btnsmall:hover {
-  background-image: url("https://i.imgur.com/i5n7PHF.png");
+  background-image: url("https://i.imgur.com/J77fmfY.png");
+}
+.btnsmall:focus {
+  background-image: url("https://i.imgur.com/J77fmfY.png");
+}
+.btnmedium {
+  display:inline-block;
+  height: auto;
+  width: 14%;
+  padding: 13%;
+  margin-right: 0px;
+  margin-left: 0px;
+  cursor:pointer;
+  background-image: url("https://i.imgur.com/O8cD49o.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border:none;
+  outline:none;
+  transition-duration: .4s;
+}
+.btnmedium:hover {
+  background-image: url("https://i.imgur.com/ZhwX945.png");
+}
+.btnmedium:focus {
+  background-image: url("https://i.imgur.com/ZhwX945.png");
 }
 .btnbig {
   display:inline-block;
   height: auto;
-  width: 10%;
-  padding: 7%;
+  width: 14%;
+  padding: 13%;
   margin-right: 0px;
   margin-left: 4%;
   margin-top: 3%;
   cursor:pointer;
-  background-image: url("https://i.imgur.com/9i85SA1.png");
+  background-image: url("https://i.imgur.com/rfpnJXS.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -352,7 +401,10 @@ buttons.
   transition-duration: .4s;
 }
 .btnbig:hover {
-  background-image: url("https://i.imgur.com/i4AmqZo.png");
+  background-image: url("https://i.imgur.com/wvqNokx.png");
+}
+.btnbig:focus {
+  background-image: url("https://i.imgur.com/wvqNokx.png");
 }
 
 /*
@@ -363,11 +415,11 @@ buttons.
 .btnfour {
   display:inline-block;
   height: auto;
-  width: 14%;
-  padding: 4%;
+  width: 20%;
+  padding: 12%;
   padding-top: 3%;
   margin-right: 0px;
-  margin-left: 0px;
+  margin-left: 5%;
   cursor:pointer;
   background-image: url("https://i.imgur.com/IOWIIKR.png");
   background-position: center;
@@ -380,14 +432,17 @@ buttons.
 .btnfour:hover {
   background-image: url("https://i.imgur.com/wUDnKTo.png");
 }
+.btnfour:focus {
+  background-image: url("https://i.imgur.com/wUDnKTo.png");
+}
 .btntwo {
   display:inline-block;
   height: auto;
-  width: 14%;
-  padding: 4%;
+  width: 20%;
+  padding: 12%;
   padding-top: 3%;
   margin-right: 0px;
-  margin-left: 0px;
+  margin-left: 5%;
   cursor:pointer;
   background-image: url("https://i.imgur.com/GR9oElK.png");
   background-position: center;
@@ -400,11 +455,14 @@ buttons.
 .btntwo:hover {
   background-image: url("https://i.imgur.com/lsM3n44.png");
 }
+.btntwo:focus {
+  background-image: url("https://i.imgur.com/lsM3n44.png");
+}
 .btnone {
   display:inline-block;
   height: auto;
-  width: 14%;
-  padding: 4%;
+  width: 20%;
+  padding: 12%;
   padding-top: 3%;
   margin-right: 0px;
   margin-left: 0px;
@@ -419,6 +477,40 @@ buttons.
 }
 .btnone:hover {
   background-image: url("https://i.imgur.com/f9Copk3.png");
+}
+.btnone:focus {
+  background-image: url("https://i.imgur.com/f9Copk3.png");
+}
+
+/*
+Below this comment is the styling for the checkout button.
+*/
+
+.button {
+  display: inline-block;
+  height: auto;
+  width: 42%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: black;
+  font-family: 'Liu Jian Mao Cao', cursive;
+  font-size: 5vw;
+  letter-spacing: 7px;
+  border: none;
+  transition-duration: .4s;
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button:active {
+  background-color: black;
 }
 
 /*
@@ -451,6 +543,62 @@ and showing the different steps upon selections.
   opacity: 0;
   transition: opacity .8s;
 }
+
+/* MOBILE VIEW SUPPORT */
+
+.mobilediv {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .mobilediv {
+    display: block;
+  }
+  .coffeeopt {
+    padding: 13%;
+  }
+  .coffeeopt3 {
+    margin-right: 0px;
+    padding: 13%;
+  }
+  .coffeeopt4 {
+    margin-right: 2%;
+    padding: 13%;
+  }
+  .btnbean {
+    padding: 18%;
+  }
+  .btnfrench {
+    padding: 18%;
+  }
+  .btndrip {
+    padding: 18%;
+  }
+  .btnchemx {
+    padding: 18%;
+  }
+  .btnkcup {
+    padding: 18%;
+  }
+  .btnesp {
+    padding: 18%;
+  }
+  .btnfour {
+    margin-left: 0px;
+    width: 45%;
+    padding: 12%;
+  }
+  .btntwo {
+    margin-left: 0px;
+    width: 45%;
+    padding: 12%;
+  }
+  .btnone {
+    width: 45%;
+    padding: 12%;
+  }
+}
+
 </style>
 
 <!--
@@ -463,72 +611,93 @@ respectively.
 <body>
 
 <!--FIRST STEP-->
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/NtK25yY.png" alt="first step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle"></div>
+<img src="https://i.imgur.com/NtK25yY.png" alt="first step" style="width:18%;height:auto;margin:-3% 0px 0px 0px;" align="center">
 <div></div>
 <button class="btngift" onclick="twoReveal()"></button>
 <button class="btnyou" onclick="twoReveal()"></button>
 
 <!--SECOND STEP-->
 <div id="secondstp">
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/LNyecZg.png" alt="second step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle"></div>
+<img src="https://i.imgur.com/LNyecZg.png" alt="second step" style="width:18%;height:auto;margin:-3% 0px 0px 0px;" align="center">
 <div></div>
-<img src="https://i.imgur.com/CDf97rs.png" style="width:37%;height:auto;margin:0px 0px 0px 0px;">
+<img src="https://i.imgur.com/CDf97rs.png" style="width:47%;height:auto;margin:0px 0px 0px 0px;">
 <div></div>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/4N3SqyA.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/eSSnKd8.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/ML6zWwP.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/5XZhkId.jpg);"></button>
-<div></div>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/3kYtprY.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/adQRzIG.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/29BK1lM.jpg); margin-right: 3%;"></button>
-<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/yH99CVp.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/4N3SqyA.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/eSSnKd8.jpg);"></button>
+<button class="coffeeopt3" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/ML6zWwP.jpg);"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt4" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/5XZhkId.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/3kYtprY.jpg);"></button>
+<button class="coffeeopt3" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/adQRzIG.jpg);"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/29BK1lM.jpg);"></button>
+<button class="coffeeopt4" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/yH99CVp.jpg);"></button>
+<button class="coffeeopt3" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/4N3SqyA.jpg);"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/eSSnKd8.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/ML6zWwP.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/5XZhkId.jpg); margin-right: 0px;"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/3kYtprY.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/adQRzIG.jpg);"></button>
+<button class="coffeeopt3" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/29BK1lM.jpg);"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt4" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/yH99CVp.jpg);"></button>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/4N3SqyA.jpg);"></button>
+<button class="coffeeopt3" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/eSSnKd8.jpg);"></button>
+<div class="mobilediv"></div>
+<button class="coffeeopt" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/ML6zWwP.jpg);"></button>
+<button class="coffeeopt4" onclick="threeReveal()" style="background-image: url(https://i.imgur.com/5XZhkId.jpg);"></button>
 </div>
 
 <!--THIRD STEP-->
 <div id="thirdstp">
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/YJvaZtS.png" alt="third step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle" style="margin: 4%;"></div>
+<img src="https://i.imgur.com/YJvaZtS.png" alt="third step" style="width:18%;height:auto;margin:-6% 0px 0px 0px;" align="center">
 <div></div>
 <button class="btnbean" onclick="fourReveal()"></button>
 <button class="btnfrench" onclick="fourReveal()"></button>
+<div class="mobilediv"></div>
 <button class="btndrip" onclick="fourReveal()"></button>
-<div></div>
 <button class="btnchemx" onclick="fourReveal()"></button>
+<div class="mobilediv"></div>
 <button class="btnkcup" onclick="fourReveal()"></button>
 <button class="btnesp" onclick="fourReveal()"></button>
 </div>
 
 <!--FOURTH STEP-->
 <div id="fourthstp">
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/VwJg4BS.png" alt="fourth step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle"></div>
+<img src="https://i.imgur.com/VwJg4BS.png" alt="fourth step" style="width:18%;height:auto;margin:-3% 0px 0px 0px;" align="center">
 <div></div>
 <button class="btnsmall" onclick="fiveReveal()"></button>
+<button class="btnmedium" onclick="fiveReveal()"></button>
 <button class="btnbig" onclick="fiveReveal()"></button>
 </div>
 
 <!--FIFTH STEP-->
 <div id="fifthstp">
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/JSvxrC9.png" alt="fifth step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle"></div>
+<img src="https://i.imgur.com/JSvxrC9.png" alt="fifth step" style="width:18%;height:auto;margin:-3% 0px 0px 0px;" align="center">
 <div></div>
-<img src="https://i.imgur.com/j9CbyGg.png" alt="a gift" style="width:13%;height:auto;margin:12px 0px 0px 0px;" align="center">
+<img src="https://i.imgur.com/j9CbyGg.png" alt="frequency" style="width:29%;height:auto;margin:12px 0px 0px 0px;" align="center">
 <div></div>
-<button class="btnfour" onclick="sixReveal()"></button>
-<button class="btntwo" onclick="sixReveal()"></button>
 <button class="btnone" onclick="sixReveal()"></button>
+<div class="mobilediv"></div>
+<button class="btntwo" onclick="sixReveal()"></button>
+<div class="mobilediv"></div>
+<button class="btnfour" onclick="sixReveal()"></button>
 </div>
 
 <!--SIXTH STEP-->
 <div id="sixthstp">
-<div class="divider div-transparent div-arrow-down"></div>
-<img src="https://i.imgur.com/fdQPFq0.png" alt="sixth step" style="width:10%;height:auto;margin:0px 0px 0px;" align="center">
+<div class="div-doodle"></div>
+<img src="https://i.imgur.com/fdQPFq0.png" alt="sixth step" style="width:18%;height:auto;margin:-3% 0px 0px 0px;" align="center">
 <div></div>
-<img src="https://i.imgur.com/7j596NQ.png" alt="a gift" style="width:10%;height:auto;margin:0px 10% 0px 0px;" align="center">
-<button class="button" style="margin: 0px 0px 8% 0px;">SUBSCRIBE</button>
+<img src="https://i.imgur.com/7j596NQ.png" alt="all done" style="width:24%;height:auto;margin:0px 10% 0px 0px;" align="center">
+<button class="button" style="margin-left: 8%; margin-bottom: 20%;">SUBSCRIBE</button>
 </div>
 
 <!--
